Reset the setting of project: set jdk 16 to jdk 15.(align with Gradescope)